adding dev pages

--- a/src/css/custom.scss
+++ b/src/css/custom.scss
@@ -41,6 +41,10 @@ body {
   background-color: rgba(0, 0, 0, 0.3);
 }
 
-img[alt*="adding_shardeum_1"], img[alt*="create_account_1"], img[alt*="create_account_2"], img[alt*="sending_transactions_2"], img[alt*="sending_transactions_3"], img[alt*="sending_transactions_4"]  {
+img[alt*="adding_shardeum_1"], img[alt*="create_account_1"], img[alt*="create_account_2"], img[alt*="sending_transactions_2"], img[alt*="sending_transactions_3"], img[alt*="sending_transactions_4"], img[alt*="tokenomics"]  {
+   width: 50%;
+}
+
+img[alt*="remix_1"], img[alt*="remix_2"], img[alt*="remix_3"], img[alt*="remix_4"], img[alt*="remix_5"], img[alt*="remix_6"], img[alt*="remix_7"], img[alt*="remix_8"]  {
    width: 50%;
 }
