--- a/src/css/custom.scss
+++ b/src/css/custom.scss
@@ -135,3 +135,28 @@ img[alt*="claim_8"] {
 .navbar_item_1:hover, .navbar_item_2:hover  {
 color: #1c1e21;
 }
+
+a[href="/faucetExplorer"] {
+  display: none;
+}
+
+.faucetContainer {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+
+}
+
+.faucetItem {
+  width: 20%;
+  margin: 2%;
+  padding: 5%;
+      flex: 1 1 auto;
+      text-align: center;
+      min-height: 50px;
+      min-width: 300px;
+      flex-wrap: wrap;
+      border: 1px solid black;
+}
