--- a/src/css/custom.scss
+++ b/src/css/custom.scss
@@ -172,5 +172,5 @@ a.navbar__item.navbar__link.navbar_item_button:hover {
 }
 
 .react-daterange-picker__inputGroup__input:invalid {
-    background: none;
+    background: none !important;
 }
