--- a/src/css/custom.scss
+++ b/src/css/custom.scss
@@ -136,9 +136,9 @@ img[alt*="claim_8"] {
 color: #1c1e21;
 }
 
-a[href="/faucetExplorer"], a[href="/networkHealth"]  {
-  display: none;
-}
+// a[href="/faucetExplorer"], a[href="/networkHealth"]  {
+//   display: none;
+// }
 
 .faucetContainer {
   width: 100%;
